<resources>
    <string name="app_name">NoQueue</string>
    <string name="ler">Ler QR Code</string>
    <string name="buscarProdutos">Buscar Produtos</string>
    <string name="produtos">Produtos</string>
    <string name="lerQrcode">Ler QrCode</string>
    <string name="informeProduto">Informe o produto:</string>
    <string name="informeOpcao">Informe a opção de pesquisa:</string>
    <string name="pesqNome">Nome</string>
    <string name="pesqPreco">Preço</string>
    <string name="validacaoLista">Nenhum produto foi encontrado!</string>
    <string name="validacaoOpcao">Selecione uma opção de pesquisa!</string>
    <string name="validacaoParamPesquisa">Informe o valor do campo de consulta!</string>
    <string name="precoInvalido">Preço inválido!</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="finalizar">Finalizar</string>
    <string name="dataValidade">Data de validade</string>
    <string name="codSeguranca">Cod. segurança</string>
    <string name="nomeTitular">Nome do titular</string>
    <string name="numeroCartao">Número do cartão</string>
    <string name="nome">Nome:</string>
    <string name="proteinas">Proteínas:</string>
    <string name="carboidratos">Carboidratos:</string>
    <string name="gordura">Gordura:</string>
    <string name="gorduraTrans">Gordura Trans:</string>
    <string name="calorias">Calorias:</string>
    <string name="fibras">Fibras:</string>
    <string name="continuar">Continuar</string>
    <string name="comprar">Comprar</string>
    <string name="valorCompra">Valor da compra: R$ </string>
    <string name="pedidoEfetuado">Pedido efetuado com sucesso!</string>
    <string name="tipoClique">Um clique longo para detalhes do produto. Um clique para definir a quantidade!</string>
    <string name="qtdeProduto">Quantidade do produto:</string>
    <string name="codSegurancaInvalido">Código de segurança inválido!</string>
    <string name="nomeTitularInvalido">Nome titular inválido!</string>
    <string name="numeroCartaoInvalido">Número do cartão inválido!</string>
    <string name="mesInvalido">A data de validade do cartão é inválida!</string>
    <string name="validaQuantidade">Informe ao menos 1 produto!</string>
    <string name="ipucb">http://172.22.2.40:8080/NoQueueServidor/</string>
    <string name="iphome">http://192.168.25.5:8080/NoQueueServidor/</string>
    <string name="debito">Debito</string>
    <string name="credito">Credito</string>

    <string-array name="array_name">
        <item>Mastercard</item>
        <item>Visa</item>
    </string-array>

    <string-array name="array_pagamento">
        <item>@string/debito</item>
        <item>@string/credito</item>
    </string-array>

    <string-array name="array_mes">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="array_ano">
        <item >2013</item>
        <item >2014</item>
        <item >2015</item>
        <item >2016</item>
        <item >2017</item>
        <item >2018</item>
    </string-array>
</resources>
