<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
	android:id="@+id/widget0"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FFFFFF"
	xmlns:android="http://schemas.android.com/apk/res/android">

<Button
    android:id="@+id/btnFinalizar"
    android:onClick="finalizarPedido"
    android:layout_width="318dp"
    android:layout_height="wrap_content"
    android:layout_x="2dp"
    android:layout_y="430dp"
    android:text="@string/finalizar"
    android:textSize="20sp" />

<TextView
    android:id="@+id/widget45"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:layout_x="6dp"
    android:layout_y="371dp"
    android:text="@string/dataValidade"
    android:textSize="20sp" />

<EditText
    android:id="@+id/codSeguranca"
    android:layout_width="88dp"
    android:layout_height="wrap_content"
    android:layout_x="158dp"
    android:layout_y="318dp"
    android:ems="10"
    android:textSize="18sp" >
</EditText>

<TextView
    android:id="@+id/widget43"
    android:layout_width="142dp"
    android:layout_height="wrap_content"
    android:layout_x="6dp"
    android:layout_y="327dp"
    android:text="@string/codSeguranca"
    android:textSize="20sp" />

<EditText
    android:id="@+id/nomeTitular"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:layout_x="5dp"
    android:layout_y="272dp"
    android:ems="10"
    
    android:textSize="18sp" />

<TextView
    android:id="@+id/widget41"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="8dp"
    android:layout_y="247dp"
    android:text="@string/nomeTitular"
    android:textSize="20sp" />

<EditText
    android:id="@+id/numCartao"
    android:layout_width="316dp"
    android:layout_height="wrap_content"
    android:layout_x="4dp"
    android:layout_y="193dp"
    android:ems="10"
    
    android:textSize="18sp" />

<TextView
    android:id="@+id/widget39"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="8dp"
    android:layout_y="166dp"
    android:text="@string/numeroCartao"
    android:textSize="20sp" />

<Spinner
    android:id="@+id/spinner"
    android:layout_width="125dp"
    android:layout_height="57dp"
    android:layout_x="8dp"
    android:layout_y="105dp" 
    android:entries="@array/array_name"/>

<ImageView
    android:id="@+id/widget35"
    android:layout_width="50dp"
    android:layout_height="76dp"
    android:layout_x="136dp"
    android:layout_y="94dp"
    /><!-- android:src="@drawable/mastercard"  -->

<ImageView
    android:id="@+id/widget36"
    android:layout_width="50dp"
    android:layout_height="76dp"
    android:layout_x="193dp"
    android:layout_y="95dp"
     /><!-- android:src="@drawable/visa" -->

<Spinner
    android:id="@+id/spinnerMes"
    android:layout_width="80dp"
    android:layout_height="48dp"
    android:layout_x="84dp"
    android:layout_y="369dp"
    android:entries="@array/array_mes" />

<TextView
    android:id="@+id/widget47"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_x="168dp"
    android:layout_y="375dp"
    android:text="/"
    android:textSize="20sp" />

<Spinner
    android:id="@+id/spinnerAno"
    android:layout_width="126dp"
    android:layout_height="48dp"
    android:layout_x="194dp"
    android:layout_y="369dp"
    android:entries="@array/array_ano" />

<Spinner
    android:id="@+id/spinnerPagamento"
    android:layout_width="125dp"
    android:layout_height="57dp"
    android:layout_x="8dp"
    android:layout_y="45dp"
    android:entries="@array/array_pagamento" />

<ImageView
    android:id="@+id/widget34"
    android:layout_width="181dp"
    android:layout_height="wrap_content"
    android:layout_x="133dp"
    android:layout_y="4dp"
   /><!-- android:src="@drawable/noqueue" -->

</AbsoluteLayout>
